--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kuntoro Tech</title>
+    <link
+      rel="shortcut icon"
+      href="./assets/img/logo.png"
+      type="image/x-icon"
+    />
     <!-- ?Google Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap"
       rel="stylesheet"
     />
+    <!-- ?Fonts Awesome -->
+    <script
+      src="https://kit.fontawesome.com/d84cf55121.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- !Custom CSS -->
     <link rel="stylesheet" href="./assets/css/custom.css" />
     <!-- ?Bootstrap -->
@@ -18,14 +28,138 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <!-- !!Animate CSS EXPERIMENT -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <!-- !!!Animate CSS EXPERIMENT ON SCROLL AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <div class="container-md">
-      <div class="row">
-        <h1>Initial Projects</h1>
+    <div class="container my-2">
+      <!-- ?Navbar menu start -->
+      <nav class="navbar navbar-light bg-transparent-kun sticky-top rounded-lg">
+        <a class="navbar-brand font-weight-bolder font-italic" href="#">
+          <img src="./assets/img/logo.png" width="44" height="44"
+          class="d-inline-block align-center alt="" loading="lazy" />
+          Kuntoro.tech
+        </a>
+        <div class="my-2 my-lg-0">
+          <a
+            href="#"
+            class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"
+            ><i class="fas fa-dna"></i> Process</a
+          >
+          <a
+            href="#"
+            class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"
+            ><i class="fas fa-ethernet"></i> Projects</a
+          >
+          <a href="#" class="btn btn-lg btn-primary-kun rounded-pill"
+            ><i class="text-light fab fa-stack-exchange"></i> Lets Talk</a
+          >
+        </div>
+      </nav>
+      <!-- ?Navbar menu end -->
+
+      <!-- ?Main info start -->
+      <div class="row d-flex justify-content-center mt-5">
+        <div
+          class="col-2 animate__animated animate__fadeInLeft animate__delay-2s animated_slowest"
+        >
+          <br />
+          <br />
+          <img src="./assets/img/like-kun-3d.jpg" class="like-kun-move" />
+        </div>
+        <div
+          class="col-8 text-center animate__animated animate__fadeInUp animate__delay-1s animate__slow"
+        >
+          <h1 class="font-weight-bolder display-1">
+            Expands any core to futures with
+            <strong
+              class="text-gradient-kun animate__animated animate__flash animate__repeat-3"
+              >Kuntoro</strong
+            >
+          </h1>
+          <p>
+            I &amp; Partners help any level personal or businesses by made a
+            branding plan and digital efficiency to jump with the core of yours.
+          </p>
+          <div class="row justify-content-center">
+            <div class="col-5 mt-5">
+              <a href="#" class="btn btn-block btn-primary-kun rounded-pill"
+                ><i class="text-light fab fa-stack-exchange"></i> Lets talk</a
+              >
+              <p class="mt-3">
+                <i
+                  class="text-success-kun fas fa-circle animate__animated animate__flash animate__repeat-3"
+                ></i>
+                <small> Avilable for freelance work. </small>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div
+          class="col-2 animate__animated animate__fadeInRight animate__delay-2s animated_slowest"
+        >
+          <br />
+          <br />
+          <br />
+          <br />
+          <img src="./assets/img/heart-kun-3d.jpg" class="heart-kun-move" />
+        </div>
+      </div>
+      <!-- ?Main info end -->
+
+      <!-- ?Second info start -->
+      <div
+        data-aos="fade-up"
+        data-aos-duration="3000"
+        class="row d-flex justify-content-center mt-5 animate__animated animate__fadeInUp animate__delay-2s animated_slowest"
+      >
+        <img
+          src="./assets/img/second-kun-main-development.jpg"
+          alt="Second flow kun development"
+          class="img-fluid rounded-lg"
+        />
+      </div>
+      <!-- ?Second info end -->
+      <div class="row mt-5" data-aos="fade-up" data-aos-duration="3000">
+        <div class="col-4">
+          <h1 class="display-5 font-weight-bolder">
+            3 major <br />branding plan problems
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam,
+            facere aspernatur magni, repellendus ducimus consequatur inventore
+            quibusdam, praesentium quam amet illo sapiente vero obcaecati! Esse
+            recusandae quia cupiditate molestias repellendus nesciunt quasi nemo
+            maxime dicta!
+          </p>
+        </div>
+        <div class="col-4">
+          <img
+            src="./assets/img/1-of-3-majors-kun.jpg"
+            alt="Problem illustration branding kun"
+            class="img-fluid rounded-lg"
+          />
+          <img
+            src="./assets/img/2-of-3-majors-kun.jpg"
+            alt="Problem illustration branding kun"
+            class="img-fluid rounded-lg mt-5"
+          />
+          <img
+            src="./assets/img/3-of-3-majors-kun.jpg"
+            alt="Problem illustration branding kun"
+            class="img-fluid rounded-lg mt-5"
+          />
+        </div>
+        <div class="col-4">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, natus.
+        </div>
       </div>
     </div>
-
     <!-- !Main JS -->
     <script src="./assets/js/main.js"></script>
     <!-- ?Bootstrap JS -->
@@ -44,5 +178,10 @@
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"
     ></script>
+    <!-- !!!Animate EXPERIMENT ON SCROLL JS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
