New adding typewriting effects

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <div class="container my-2">
+    <div class="container my-3">
       <!-- ?Navbar menu start -->
       <nav class="navbar navbar-light bg-transparent-kun sticky-top rounded-lg">
         <a class="navbar-brand font-weight-bolder font-italic" href="#">
@@ -76,7 +76,14 @@
           class="col-8 text-center animate__animated animate__fadeInUp animate__delay-1s animate__slow"
         >
           <h1 class="font-weight-bolder display-1">
-            Expands any core to futures with
+            <a
+              href="#"
+              class="typewrite-kun text-decoration-none"
+              data-period="2000"
+              data-type='[ "Expands", "Growth", "Evolving", "Deepest" ]'
+              ><span class="wrap"></span
+            ></a>
+            any core to futures with
             <strong
               class="text-gradient-kun animate__animated animate__flash animate__repeat-3"
               >Kuntoro</strong
@@ -116,7 +123,7 @@
       <div
         data-aos="fade-up"
         data-aos-duration="3000"
-        class="row d-flex justify-content-center mt-5 animate__animated animate__fadeInUp animate__delay-2s animated_slowest"
+        class="row justify-content-center mt-5 animate__animated animate__fadeInUp animate__delay-2s animated_slowest"
       >
         <img
           src="./assets/img/second-kun-main-development.jpg"
