Grid system for 3 majors sections

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
           class="col-8 text-center animate__animated animate__fadeInUp animate__delay-1s animate__slow"
         >
           <h1 class="font-weight-bolder display-1">
-            <a
-              href="#"
+            <strong
               class="typewrite-kun text-decoration-none"
               data-period="2000"
               data-type='[ "Expands", "Growth", "Evolving", "Deepest" ]'
-              ><span class="wrap"></span
-            ></a>
+            >
+              <span class="wrap"></span>
+            </strong>
             any core to futures with
             <strong
               class="text-gradient-kun animate__animated animate__flash animate__repeat-3"
@@ -145,25 +145,46 @@
             maxime dicta!
           </p>
         </div>
-        <div class="col-4">
-          <img
-            src="./assets/img/1-of-3-majors-kun.jpg"
-            alt="Problem illustration branding kun"
-            class="img-fluid rounded-lg"
-          />
-          <img
-            src="./assets/img/2-of-3-majors-kun.jpg"
-            alt="Problem illustration branding kun"
-            class="img-fluid rounded-lg mt-5"
-          />
-          <img
-            src="./assets/img/3-of-3-majors-kun.jpg"
-            alt="Problem illustration branding kun"
-            class="img-fluid rounded-lg mt-5"
-          />
-        </div>
-        <div class="col-4">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, natus.
+        <div class="col-8">
+          <div class="row">
+            <div class="col">
+              <img
+                src="./assets/img/1-of-3-majors-kun.jpg"
+                alt="Problem illustration branding kun"
+                class="img-fluid rounded-lg"
+              />
+            </div>
+            <div class="col">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,
+              natus.
+            </div>
+          </div>
+          <div class="row mt-5">
+            <div class="col">
+              <img
+                src="./assets/img/2-of-3-majors-kun.jpg"
+                alt="Problem illustration branding kun"
+                class="img-fluid rounded-lg"
+              />
+            </div>
+            <div class="col">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,
+              natus.
+            </div>
+          </div>
+          <div class="row mt-5">
+            <div class="col">
+              <img
+                src="./assets/img/3-of-3-majors-kun.jpg"
+                alt="Problem illustration branding kun"
+                class="img-fluid rounded-lg"
+              />
+            </div>
+            <div class="col">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,
+              natus.
+            </div>
+          </div>
         </div>
       </div>
     </div>
