--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <div class="container my-3">
+    <div class="container">
       <!-- ?Navbar menu start -->
-      <nav class="navbar navbar-light bg-transparent-kun sticky-top rounded-lg">
-        <a class="navbar-brand font-weight-bolder font-italic" href="#">
+      <nav
+        class="navbar navbar-light bg-transparent-kun fixed-top rounded-lg mx-5"
+      >
+        <a class="navbar-brand font-weight-normal font-italic" href="#">
           <img src="./assets/img/logo.png" width="44" height="44"
-          class="d-inline-block align-center alt="" loading="lazy" />
-          Kuntoro.tech
+          class="d-inline-block align-center alt="logo Kuntoro.tech"
+          loading="lazy" /> Kuntoro.tech
         </a>
         <div class="my-2 my-lg-0">
           <a
@@ -61,10 +63,12 @@
           >
         </div>
       </nav>
-      <!-- ?Navbar menu end -->
+    </div>
+    <!-- ?Navbar menu end -->
 
+    <div class="container">
       <!-- ?Main info start -->
-      <div class="row d-flex justify-content-center mt-5">
+      <div class="row d-flex justify-content-center" style="margin-top: 10%">
         <div
           class="col-2 animate__animated animate__fadeInLeft animate__delay-2s animated_slowest"
         >
@@ -134,7 +138,7 @@
       <!-- ?Second info end -->
       <div class="row mt-5" data-aos="fade-up" data-aos-duration="3000">
         <div class="col-4">
-          <h1 class="display-5 font-weight-bolder">
+          <h1 class="font-weight-bold mt-3">
             3 major <br />branding plan problems
           </h1>
           <p>
@@ -151,12 +155,34 @@
               <img
                 src="./assets/img/1-of-3-majors-kun.jpg"
                 alt="Problem illustration branding kun"
-                class="img-fluid rounded-lg"
+                class="img-fluid rounded-lg mt-3"
               />
             </div>
             <div class="col">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,
-              natus.
+              <div class="row">
+                <div class="col">
+                  <div class="card bg-transparent border-0">
+                    <i
+                      class="card-img text-1of3-majors-kun fas fa-circle fa-2x mt-3"
+                    ></i>
+                    <div class="card-img-overlay">
+                      <div class="card-title">
+                        <h2>1</h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-10">
+                  <h2 class="mt-3">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing.
+                  </h2>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Iusto illum minima rerum cum blanditiis quia expedita facere
+                    sapiente modi aspernatur!
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="row mt-5">
