New footer and some adding custom colors

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
+    <!-- ?Navbar menu start -->
     <div class="container">
-      <!-- ?Navbar menu start -->
       <nav
         class="navbar navbar-light bg-transparent-kun fixed-top rounded-lg mx-5"
       >
@@ -66,8 +66,8 @@
     </div>
     <!-- ?Navbar menu end -->
 
+    <!-- ?Main info start -->
     <div class="container">
-      <!-- ?Main info start -->
       <div class="row d-flex justify-content-center" style="margin-top: 10%">
         <div
           class="col-2 animate__animated animate__fadeInLeft animate__delay-2s animated_slowest"
@@ -121,9 +121,11 @@
           <img src="./assets/img/heart-kun-3d.jpg" class="heart-kun-move" />
         </div>
       </div>
-      <!-- ?Main info end -->
+    </div>
+    <!-- ?Main info end -->
 
-      <!-- ?Second info start -->
+    <!-- ?Second info start -->
+    <div class="container">
       <div
         data-aos="fade-up"
         data-aos-duration="3000"
@@ -135,7 +137,11 @@
           class="img-fluid rounded-lg"
         />
       </div>
-      <!-- ?Second info end -->
+    </div>
+    <!-- ?Second info end -->
+
+    <!-- ?Thrid info start -->
+    <div class="container">
       <div class="row mt-5" data-aos="fade-up" data-aos-duration="3000">
         <div class="col-4">
           <h1 class="font-weight-bold mt-3">
@@ -214,6 +220,32 @@
         </div>
       </div>
     </div>
+    <!-- ?Thrid info end -->
+    <!-- ?Footer start -->
+    <footer class="footer mt-auto py-2 bg-primary-kun">
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <p class="text-light font-weight-normal">Made with Prides.</p>
+          </div>
+          <div class="col-6">
+            <p class="text-light font-weight-normal">
+              Wanna to jump me to yours? touch
+              <a
+                href="mailto:farridguntoro@gmail.com"
+                class="text-gradient-kun font-italic font-weight-bold text-decoration-none"
+                >me here</a
+              >
+            </p>
+          </div>
+          <div class="col-3">
+            <p class="text-light font-weight-normal">Stalk me at I G T.</p>
+            <!-- Icon Instagram, Github, and Twitter -->
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- ?Footer end -->
     <!-- !Main JS -->
     <script src="./assets/js/main.js"></script>
     <!-- ?Bootstrap JS -->
