--- a/index.html
+++ b/index.html
@@ -1,57 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kuntoro Tech</title>
-    <link
-      rel="shortcut icon"
-      href="./assets/img/logo.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon" />
     <!-- ?Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet" />
     <!-- ?Fonts Awesome -->
-    <script
-      src="https://kit.fontawesome.com/d84cf55121.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/d84cf55121.js" crossorigin="anonymous"></script>
     <!-- !Custom CSS -->
     <link rel="stylesheet" href="./assets/css/custom.css" />
     <!-- ?Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <!-- !!Animate CSS EXPERIMENT -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- !!!Animate CSS EXPERIMENT ON SCROLL AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <!-- ?Navbar menu start -->
     <div class="container">
-      <nav
-        class="navbar navbar-light bg-transparent-kun fixed-top rounded-lg mx-5"
-      >
-        <a class="navbar-brand font-weight-normal font-italic" href="#">
+        <nav class="navbar navbar-light bg-transparent-kun fixed-top rounded-lg mx-5">
+            <a class="navbar-brand font-weight-normal font-italic" href="#">
           <img src="./assets/img/logo.png" width="44" height="44"
           class="d-inline-block align-center alt="logo Kuntoro.tech"
           loading="lazy" /> Kuntoro.tech
         </a>
-        <div class="my-2 my-lg-0">
-          <a
-            href="#"
-            class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"
-            ><i class="fas fa-dna"></i> Process</a
+            <div class="my-2 my-lg-0">
+                <a href="#" class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"><i class="fas fa-dna"></i> Process</a
           >
           <a
             href="#"
@@ -141,7 +120,7 @@
     <!-- ?Second info end -->
 
     <!-- ?Thrid info start -->
-    <div class="container">
+    <div class="container mb-5">
       <div class="row mt-5" data-aos="fade-up" data-aos-duration="3000">
         <div class="col-4">
           <h1 class="font-weight-bold mt-3">
@@ -200,8 +179,30 @@
               />
             </div>
             <div class="col">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,
-              natus.
+              <div class="row">
+                <div class="col">
+                  <div class="card bg-transparent border-0">
+                    <i
+                      class="card-img text-2of3-majors-kun fas fa-circle fa-2x mt-3"
+                    ></i>
+                    <div class="card-img-overlay">
+                      <div class="card-title">
+                        <h2>2</h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-10">
+                  <h2 class="mt-3">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing.
+                  </h2>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Iusto illum minima rerum cum blanditiis quia expedita facere
+                    sapiente modi aspernatur!
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="row mt-5">
@@ -213,8 +214,30 @@
               />
             </div>
             <div class="col">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,
-              natus.
+              <div class="row">
+                <div class="col">
+                  <div class="card bg-transparent border-0">
+                    <i
+                      class="card-img text-3of3-majors-kun fas fa-circle fa-2x mt-3"
+                    ></i>
+                    <div class="card-img-overlay">
+                      <div class="card-title">
+                        <h2>3</h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-10">
+                  <h2 class="mt-3">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing.
+                  </h2>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Iusto illum minima rerum cum blanditiis quia expedita facere
+                    sapiente modi aspernatur!
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -222,52 +245,53 @@
     </div>
     <!-- ?Thrid info end -->
     <!-- ?Footer start -->
-    <footer class="footer mt-auto py-2 bg-primary-kun">
+    <footer class="footer mt-auto py-2 bg-secondary-kun">
       <div class="container">
-        <div class="row">
-          <div class="col-3">
-            <p class="text-light font-weight-normal">Made with Prides.</p>
+        <div class="row justify-content-md-center mt-3">
+          <div class="col col-lg-2">
+            <p class="font-weight-normal">Made with <i class="fab fa-gratipay text-primary-kun"></i></p>
           </div>
-          <div class="col-6">
-            <p class="text-light font-weight-normal">
+          <div class="col-md-auto">
+            <p class="font-weight-normal">
               Wanna to jump me to yours? touch
               <a
                 href="mailto:farridguntoro@gmail.com"
-                class="text-gradient-kun font-italic font-weight-bold text-decoration-none"
-                >me here</a
+                class="text-primary-kun font-italic font-weight-bold text-decoration-none"
+                >me farridguntoro@gmail.com</a
               >
             </p>
           </div>
-          <div class="col-3">
-            <p class="text-light font-weight-normal">Stalk me at I G T.</p>
+          <div class="col col-lg-2">
+            <p class="font-weight-normal">
+              Stalk me at
+              <a href="https://instagram.com/farrid_jr" target="_blank" class="text-decoration-none font-weight-bold">
+                <i class="fab fa-instagram-square text-primary-kun"></i>
+              </a>
+                <a href="https://github.com/farridkun" target="_blank" class="text-decoration-none font-weight-bold">
+                    <i class="fab fa-github text-primary-kun"></i>
+                </a>
+                <a href="https://twitter.com/@kuntoro_farrid" target="_blank" class="text-decoration-none font-weight-bold">
+                    <i class="fab fa-twitter-square text-primary-kun"></i>
+                </a>
+                </p>
+            </div>
             <!-- Icon Instagram, Github, and Twitter -->
-          </div>
-        </div>
-      </div>
+    </div>
+    </div>
+    </div>
     </footer>
     <!-- ?Footer end -->
     <!-- !Main JS -->
     <script src="./assets/js/main.js"></script>
     <!-- ?Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <!-- !!!Animate EXPERIMENT ON SCROLL JS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+        AOS.init();
     </script>
-  </body>
+</body>
+
 </html>
