Fixing custom css

--- a/index.html
+++ b/index.html
@@ -253,11 +253,11 @@
           </div>
           <div class="col-md-auto">
             <p class="font-weight-normal">
-              Wanna to jump me to yours? touch
+              Wanna to jump me to yours?
               <a
                 href="mailto:farridguntoro@gmail.com"
                 class="text-primary-kun font-italic font-weight-bold text-decoration-none"
-                >me farridguntoro@gmail.com</a
+                >farridguntoro@gmail.com</a
               >
             </p>
           </div>
