--- a/index.html
+++ b/index.html
@@ -244,6 +244,302 @@
       </div>
     </div>
     <!-- ?Thrid info end -->
+    <!-- ?Process Exploring start -->
+    <div class="container mb-5">
+      <div class="row justify-content-center">
+        <ul class="list-group">
+          <li class="text-monospace font-weight-bold text-center list-group-item border-0">EXPLORE MY PROCESS</li>
+          <!-- !Start 1of3 Process -->
+          <li class="list-group-item text-center border-top-0 border-right-0 border-bottom-0 border-left-0"><img src="./assets/img/1-of-3-lexp-kun.png" alt="Explore Process 1of3 Kun" class="img-fluid"></li>
+          <li class="list-group h2 text-center">Plan</li>
+          <li class="list-group h1 font-weight-bold text-center mt-3">Micro to Macro Plan</li>
+          <li class="list-group font-weight-normal text-center mt-3">Plan is not just about the number but think core too for any passing the competitors or made <br> new decision for a true first side and be a goldest your business</li>
+          <li class="list-group text-center rounded-lg mt-3">
+            <img
+          src="./assets/img/1-of-3-exp-kun.jpg"
+          alt="One Explore Process Kun"
+          class="img-fluid rounded-lg"
+        />
+          </li>
+          <li class="list-group text-center mt-3">
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <div class="card bg-transparent border-0">
+                      <i
+                        class="card-img text-2of3-majors-kun fas fa-circle fa-2x mt-3"
+                      ></i>
+                      <div class="card-img-overlay">
+                        <div class="card-title">
+                          <h2>1</h2>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-10 text-left">
+                    <h2 class="mt-3">
+                      Planning
+                    </h2>
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Iusto illum minima rerum cum blanditiis quia expedita facere
+                      sapiente modi aspernatur!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <div class="card bg-transparent border-0">
+                      <i
+                        class="card-img text-2of3-majors-kun fas fa-circle fa-2x mt-3"
+                      ></i>
+                      <div class="card-img-overlay">
+                        <div class="card-title">
+                          <h2>2</h2>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-10 text-left">
+                    <h2 class="mt-3">
+                      Research
+                    </h2>
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Iusto illum minima rerum cum blanditiis quia expedita facere
+                      sapiente modi aspernatur!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <div class="card bg-transparent border-0">
+                      <i
+                        class="card-img text-2of3-majors-kun fas fa-circle fa-2x mt-3"
+                      ></i>
+                      <div class="card-img-overlay">
+                        <div class="card-title">
+                          <h2>3</h2>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-10 text-left">
+                    <h2 class="mt-3">
+                      Running
+                    </h2>
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Iusto illum minima rerum cum blanditiis quia expedita facere
+                      sapiente modi aspernatur!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <!-- !End 1of3 Process -->
+
+          <!-- !Start 2of3 Process -->
+          <li class="list-group-item text-center border-top-0 border-right-0 border-bottom-0 border-left-0"><img src="./assets/img/2-of-3-lexp-kun.png" alt="Explore Process 2of3 Kun" class="img-fluid"></li>
+          <li class="list-group h2 text-center">Development</li>
+          <li class="list-group h1 font-weight-bold text-center mt-3">Powering on Core Development</li>
+          <li class="list-group font-weight-normal text-center mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ducimus rerum <br> hic eaque consectetur culpa nisi voluptates laudantium laborum temporibus!</li>
+          <li class="list-group text-center rounded-lg mt-3">
+            <img
+          src="./assets/img/2-of-3-exp-kun.jpg"
+          alt="Two Explore Process Kun"
+          class="img-fluid rounded-lg"
+        />
+          </li>
+          <li class="list-group text-center mt-3">
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <div class="card bg-transparent border-0">
+                      <i
+                        class="card-img text-1of3-majors-kun fas fa-circle fa-2x mt-3"
+                      ></i>
+                      <div class="card-img-overlay">
+                        <div class="card-title">
+                          <h2>1</h2>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-10 text-left">
+                    <h2 class="mt-3">
+                      Imagine
+                    </h2>
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Iusto illum minima rerum cum blanditiis quia expedita facere
+                      sapiente modi aspernatur!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <div class="card bg-transparent border-0">
+                      <i
+                        class="card-img text-1of3-majors-kun fas fa-circle fa-2x mt-3"
+                      ></i>
+                      <div class="card-img-overlay">
+                        <div class="card-title">
+                          <h2>2</h2>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-10 text-left">
+                    <h2 class="mt-3">
+                      Drawing
+                    </h2>
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Iusto illum minima rerum cum blanditiis quia expedita facere
+                      sapiente modi aspernatur!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <div class="card bg-transparent border-0">
+                      <i
+                        class="card-img text-1of3-majors-kun fas fa-circle fa-2x mt-3"
+                      ></i>
+                      <div class="card-img-overlay">
+                        <div class="card-title">
+                          <h2>3</h2>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-10 text-left">
+                    <h2 class="mt-3">
+                      Implementing
+                    </h2>
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Iusto illum minima rerum cum blanditiis quia expedita facere
+                      sapiente modi aspernatur!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <!-- !End 2of3 Process -->
+
+          <!-- !Start 3of3 Process -->
+          <li class="list-group-item text-center border-top-0 border-right-0 border-bottom-0 border-left-0"><img src="./assets/img/3-of-3-lexp-kun.png" alt="Explore Process 3of3 Kun" class="img-fluid"></li>
+          <li class="list-group h2 text-center">Growing</li>
+          <li class="list-group h1 font-weight-bold text-center mt-3">Launching with Growings</li>
+          <li class="list-group font-weight-normal text-center mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ducimus rerum <br> hic eaque consectetur culpa nisi voluptates laudantium laborum temporibus!</li>
+          <li class="list-group text-center rounded-lg mt-3">
+            <img
+          src="./assets/img/3-of-3-exp-kun.jpg"
+          alt="Three Explore Process Kun"
+          class="img-fluid rounded-lg"
+        />
+          </li>
+          <li class="list-group text-center mt-3">
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <div class="card bg-transparent border-0">
+                      <i
+                        class="card-img text-3of3-majors-kun fas fa-circle fa-2x mt-3"
+                      ></i>
+                      <div class="card-img-overlay">
+                        <div class="card-title">
+                          <h2>1</h2>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-10 text-left">
+                    <h2 class="mt-3">
+                      Imagine
+                    </h2>
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Iusto illum minima rerum cum blanditiis quia expedita facere
+                      sapiente modi aspernatur!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <div class="card bg-transparent border-0">
+                      <i
+                        class="card-img text-3of3-majors-kun fas fa-circle fa-2x mt-3"
+                      ></i>
+                      <div class="card-img-overlay">
+                        <div class="card-title">
+                          <h2>2</h2>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-10 text-left">
+                    <h2 class="mt-3">
+                      Drawing
+                    </h2>
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Iusto illum minima rerum cum blanditiis quia expedita facere
+                      sapiente modi aspernatur!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <div class="card bg-transparent border-0">
+                      <i
+                        class="card-img text-3of3-majors-kun fas fa-circle fa-2x mt-3"
+                      ></i>
+                      <div class="card-img-overlay">
+                        <div class="card-title">
+                          <h2>3</h2>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-10 text-left">
+                    <h2 class="mt-3">
+                      Implementing
+                    </h2>
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Iusto illum minima rerum cum blanditiis quia expedita facere
+                      sapiente modi aspernatur!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <!-- !End 3of3 Process -->
+        </ul>
+      </div>
+    </div>
+    <!-- ?Process Exploring end -->
     <!-- ?Footer start -->
     <footer class="footer mt-auto py-2 bg-secondary-kun">
       <div class="container">
