New adding scroll nav simply

--- a/index.html
+++ b/index.html
@@ -1,86 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<h tml lang="en">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kuntoro Tech</title>
-    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon" />
-    <!-- ?Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet" />
-    <!-- ?Fonts Awesome -->
-    <script src="https://kit.fontawesome.com/d84cf55121.js" crossorigin="anonymous"></script>
-    <!-- !Custom CSS -->
-    <link rel="stylesheet" href="./assets/css/custom.css" />
-    <!-- ?Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-    <!-- !!Animate CSS EXPERIMENT -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <!-- !!!Animate CSS EXPERIMENT ON SCROLL AOS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-</head>
+    <h ead>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Kuntoro Tech</title>
+        <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon" />
+        <!-- ?Google Fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet" />
+        <!-- ?Fonts Awesome -->
+        <script src="https://kit.fontawesome.com/d84cf55121.js" crossorigin="anonymous"></script>
+        <!-- !Custom CSS -->
+        <link rel="stylesheet" href="./assets/css/custom.css" />
+        <!-- ?Bootstrap -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+        <!-- !!Animate CSS EXPERIMENT -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <!-- !!!Animate CSS EXPERIMENT ON SCROLL AOS -->
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        </head>
 
-<body>
-    <!-- ?Navbar menu start -->
-    <div class="container">
-        <nav class="navbar navbar-light bg-transparent-kun fixed-top rounded-lg mx-5">
-            <a class="navbar-brand font-weight-normal font-italic" href="#">
-          <img src="./assets/img/logo.png" width="44" height="44"
+        <body>
+            <!-- ?Navbar menu start -->
+            <div class="container">
+                <nav class="navbar navbar-light bg-transparent-kun fixed-top rounded-lg mx-5">
+                    <a class="navbar-brand font-weight-normal font-italic" href="#">
+            <img src="./assets/img/logo.png" width="44" height="44"
           class="d-inline-block align-center alt="logo Kuntoro.tech"
-          loading="lazy" /> Kuntoro.tech
-        </a>
-            <div class="my-2 my-lg-0">
-                <a href="#" class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"><i class="fas fa-dna"></i> Process</a
-          >
-          <a
-            href="#"
-            class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"
+            loading="lazy" /> Kuntoro.tech
+            </a>
+                    <div class="my-2 my-lg-0">
+                        <a href="#process" class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"><i class="fas fa-dna"></i> Process</a
+              >
+              <a
+                href="#projects"
+              class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"
             ><i class="fas fa-ethernet"></i> Projects</a
-          >
-          <a href="#" class="btn btn-lg btn-primary-kun rounded-pill"
-            ><i class="text-light fab fa-stack-exchange"></i> Lets Talk</a
+            >
+              <a href="#" class="btn btn-lg btn-primary-kun rounded-pill"
+              ><i class="text-light fab fa-stack-exchange"></i> Lets Talk</a
           >
         </div>
       </nav>
-    </div>
-    <!-- ?Navbar menu end -->
-
-    <!-- ?Main info start -->
-    <div class="container">
-      <div class="row d-flex justify-content-center" style="margin-top: 10%">
-        <div
-          class="col-2 animate__animated animate__fadeInLeft animate__delay-2s animated_slowest"
-        >
-          <br />
-          <br />
-          <img src="./assets/img/like-kun-3d.jpg" class="like-kun-move" />
-        </div>
-        <div
+      </div>
+      <!-- ?Navbar menu end -->
+    
+        <!-- ?Main info start -->
+        <div class="container">
+            <div class="row d-flex justify-content-center" style="margin-top: 10%">
+            <div
+            class="col-2 animate__animated animate__fadeInLeft animate__delay-2s animated_slowest"
+          >
+            <br />
+            <br />
+            <img src="./assets/img/like-kun-3d.jpg" class="like-kun-move" />
+            </div>
+          <div
           class="col-8 text-center animate__animated animate__fadeInUp animate__delay-1s animate__slow"
         >
-          <h1 class="font-weight-bolder display-1">
-            <strong
-              class="typewrite-kun text-decoration-none"
+          <h1 class="font-we ight-bolder display-1">
+              <strong
+                class="typewrite-kun text-decoration-none"
               data-period="2000"
-              data-type='[ "Expands", "Growth", "Evolving", "Deepest" ]'
-            >
-              <span class="wrap"></span>
-            </strong>
+                  data-type='[ "Expands", "Growth", "Evolving", "Deepest" ]'
+                >
+                    <span class="wrap"></span>
+                  </strong>
             any core to futures with
-            <strong
-              class="text-gradient-kun animate__animated animate__flash animate__repeat-3"
+                  <strong
+                    class="text-gradient-kun animate__animated animate__flash animate__repeat-3"
               >Kuntoro</strong
-            >
-          </h1>
-          <p>
-            I &amp; Partners help any level personal or businesses by made a
-            branding plan and digital efficiency to jump with the core of yours.
-          </p>
-          <div class="row justify-content-center">
-            <div class="col-5 mt-5">
-              <a href="#" class="btn btn-block btn-primary-kun rounded-pill"
-                ><i class="text-light fab fa-stack-exchange"></i> Lets talk</a
-              >
+                  >
+                </h1>
+                <p>
+                    I &amp; Partners help any level personal or businesses by made a
+                  branding pla n
+ and digital efficiency to jump with the core of yours.
+                  <div class="row justify-content-center">
+                    <div class="col-5 mt-5">
+                    <a href="#" class="btn btn-block btn-primary-kun rounded-pill"
+                    ><i class="text-light fab fa-stack-exchange"></i> Lets talk</a
+                >
               <p class="mt-3">
                 <i
                   class="text-success-kun fas fa-circle animate__animated animate__flash animate__repeat-3"
@@ -244,8 +244,9 @@
       </div>
     </div>
     <!-- ?Thrid info end -->
+
     <!-- ?Process Exploring start -->
-    <div class="container mb-5">
+    <div class="container mb-5" id="process">
       <div class="row justify-content-center">
         <ul class="list-group">
           <li class="text-monospace font-weight-bold text-center list-group-item border-0">EXPLORE MY PROCESS</li>
@@ -563,31 +564,32 @@
               <a href="https://instagram.com/farrid_jr" target="_blank" class="text-decoration-none font-weight-bold">
                 <i class="fab fa-instagram-square text-primary-kun"></i>
               </a>
-                <a href="https://github.com/farridkun" target="_blank" class="text-decoration-none font-weight-bold">
-                    <i class="fab fa-github text-primary-kun"></i>
-                </a>
-                <a href="https://twitter.com/@kuntoro_farrid" target="_blank" class="text-decoration-none font-weight-bold">
-                    <i class="fab fa-twitter-square text-primary-kun"></i>
-                </a>
-                </p>
+                        <a href="https://github.com/farridkun" target="_blank" class="text-decoration-none font-weight-bold">
+                            <i class="fab fa-github text-primary-kun"></i>
+                        </a>
+                        <a href="https://twitter.com/@kuntoro_farrid" target="_blank" class="text-decoration-none font-weight-bold">
+                            <i class="fab fa-twitter-square text-primary-kun"></i>
+                        </a>
+                        </p>
+                    </div>
             </div>
-            <!-- Icon Instagram, Github, and Twitter -->
-    </div>
-    </div>
-    </div>
-    </footer>
-    <!-- ?Footer end -->
-    <!-- !Main JS -->
-    <script src="./assets/js/main.js"></script>
-    <!-- ?Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    <!-- !!!Animate EXPERIMENT ON SCROLL JS -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-</body>
+            </div>
+            </div>
+            </footer>
+            <!-- ?Footer end -->
+            <!-- !Main JS -->
+            <script src="./assets/js/main.js"></script>
+            <!-- !Nav Scroll JS -->
+            <script src="./assets/js/nav-scroll.js"></script>
+            <!-- ?Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+            <!-- !!!Animate EXPERIMENT ON SCROLL JS -->
+            <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+            <script>
+                AOS.init();
+            </script>
+        </body>
 
-</html>
+        </html>
