Tiny fixers on Head Nav

--- a/index.html
+++ b/index.html
@@ -541,6 +541,15 @@
       </div>
     </div>
     <!-- ?Process Exploring end -->
+
+    <!-- ?Contact Form Start -->
+    <div class="container mt-5 mb-5">
+      <div class="row justify-content-center">
+        <!-- HERE CONTACT FORM -->
+      </div>
+    </div>
+    <!-- ?Contact Form End -->
+
     <!-- ?Footer start -->
     <footer class="footer mt-auto py-2 bg-secondary-kun">
       <div class="container">
