Adding a Contact form section

--- a/index.html
+++ b/index.html
@@ -1,75 +1,57 @@
 <!DOCTYPE html>
-<h tml lang="en">
+<html lang="en">
 
-    <h ead>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Kuntoro Tech</title>
-        <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon" />
-        <!-- ?Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet" />
-        <!-- ?Fonts Awesome -->
-        <script src="https://kit.fontawesome.com/d84cf55121.js" crossorigin="anonymous"></script>
-        <!-- !Custom CSS -->
-        <link rel="stylesheet" href="./assets/css/custom.css" />
-        <!-- ?Bootstrap -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-        <!-- !!Animate CSS EXPERIMENT -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-        <!-- !!!Animate CSS EXPERIMENT ON SCROLL AOS -->
-        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-        </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kuntoro Tech</title>
+    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon" />
+    <!-- ?Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet" />
+    <!-- ?Fonts Awesome -->
+    <script src="https://kit.fontawesome.com/d84cf55121.js" crossorigin="anonymous"></script>
+    <!-- !Custom CSS -->
+    <link rel="stylesheet" href="./assets/css/custom.css" />
+    <!-- ?Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <!-- !!Animate CSS EXPERIMENT -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- !!!Animate CSS EXPERIMENT ON SCROLL AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+</head>
 
-        <body>
-            <!-- ?Navbar menu start -->
-            <div class="container">
-                <nav class="navbar navbar-light bg-transparent-kun fixed-top rounded-lg mx-5">
-                    <a class="navbar-brand font-weight-normal font-italic" href="#">
+<body>
+    <!-- ?Navbar menu start -->
+    <div class="container">
+        <nav class="navbar navbar-light bg-transparent-kun fixed-top rounded-lg mx-5">
+            <a class="navbar-brand font-weight-normal font-italic" href="#">
             <img src="./assets/img/logo.png" width="44" height="44"
           class="d-inline-block align-center alt="logo Kuntoro.tech"
             loading="lazy" /> Kuntoro.tech
             </a>
-                    <div class="my-2 my-lg-0">
-                        <a href="#process" class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"><i class="fas fa-dna"></i> Process</a
-              >
-              <a
-                href="#projects"
-              class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"
-            ><i class="fas fa-ethernet"></i> Projects</a
-            >
-              <a href="#" class="btn btn-lg btn-primary-kun rounded-pill"
-              ><i class="text-light fab fa-stack-exchange"></i> Lets Talk</a
-          >
-        </div>
-      </nav>
-      </div>
-      <!-- ?Navbar menu end -->
-    
-        <!-- ?Main info start -->
-        <div class="container">
-            <div class="row d-flex justify-content-center" style="margin-top: 10%">
-            <div
-            class="col-2 animate__animated animate__fadeInLeft animate__delay-2s animated_slowest"
-          >
-            <br />
-            <br />
-            <img src="./assets/img/like-kun-3d.jpg" class="like-kun-move" />
+            <div class="my-2 my-lg-0">
+                <a href="#process" class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"><i class="fas fa-dna"></i> Process</a>
+                <a href="#projects" class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"><i class="fas fa-ethernet"></i> Projects</a>
+                <a href="#contact" class="btn btn-lg btn-primary-kun rounded-pill"><i class="text-light fab fa-stack-exchange"></i> Lets Talk</a>
             </div>
-          <div
-          class="col-8 text-center animate__animated animate__fadeInUp animate__delay-1s animate__slow"
-        >
-          <h1 class="font-we ight-bolder display-1">
-              <strong
-                class="typewrite-kun text-decoration-none"
-              data-period="2000"
-                  data-type='[ "Expands", "Growth", "Evolving", "Deepest" ]'
-                >
+        </nav>
+    </div>
+    <!-- ?Navbar menu end -->
+
+    <!-- ?Main info start -->
+    <div class="container">
+        <div class="row d-flex justify-content-center" style="margin-top: 10%">
+            <div class="col-2 animate__animated animate__fadeInLeft animate__delay-2s animated_slowest">
+                <br />
+                <br />
+                <img src="./assets/img/like-kun-3d.jpg" class="like-kun-move" />
+            </div>
+            <div class="col-8 text-center animate__animated animate__fadeInUp animate__delay-1s animate__slow">
+                <h1 class="font-we ight-bolder display-1">
+                    <strong class="typewrite-kun text-decoration-none" data-period="2000" data-type='[ "Expands", "Growth", "Evolving", "Deepest" ]'>
                     <span class="wrap"></span>
-                  </strong>
-            any core to futures with
-                  <strong
-                    class="text-gradient-kun animate__animated animate__flash animate__repeat-3"
-              >Kuntoro</strong
+                  </strong> any core to futures with
+                    <strong class="text-gradient-kun animate__animated animate__flash animate__repeat-3">Kuntoro</strong
                   >
                 </h1>
                 <p>
@@ -543,28 +525,55 @@
     <!-- ?Process Exploring end -->
 
     <!-- ?Contact Form Start -->
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5 mb-5" id="contact">
       <div class="row justify-content-center">
-        <!-- HERE CONTACT FORM -->
-      </div>
-    </div>
-    <!-- ?Contact Form End -->
+        <ul class="list-group">
+          <li class="text-monospace font-weight-bold text-center list-group-item border-0">CONTACT</li>
+          <li class="list-group-item h1 text-center border-top-0 border-right-0 border-bottom-0 border-left-0">
+            Let me know you need
+          </li>
+          <li class="list-group text-center">
+            Just let it down on below field form for touch me, it will reply as soon as possible.
+          </li>
+          <li class="list-group">
+            <div class="card">
+              <img src="./assets/img/contact-kun-bg.jpg" class="card-img" alt="Background contact kun">
+              <div class="card-img-overlay d-flex flex-row-reverse">
+                <form class="col-6">
+                  <div class="form-group input-group-lg rounded-lg mt-3">
+                    <label for="formName" class="text-white">Your name :</label>
+                    <input type="text" class="form-control" id="formName" placeholder="Type your name">
+                  </div>
+                  <div class="form-group input-group-lg rounded-lg">
+                    <label for="formEmail" class="text-white">Your email :</label>
+                    <input type="text" class="form-control input-lg" id="formEmail" placeholder="Type your email">
+                  </div>
+                  <div class="form-group rounded-lg">
+                    <label for="formMessage" class="text-white">Your message :</label>
+                    <textarea  class="form-control" id="formMessage" rows="5" placeholder="Tell me what i &amp; partners can help yours"> </textarea>
+                  </div>
+                  <br>
+                  <a href="mailto:farridguntoro@gmail.com" class="btn btn-lg btn-block btn-success-kun text-decoration-none">SEND</a>
+                        </form>
+                    </div>
+            </div>
+            </li>
+            </ul>
+            </div>
+            </div>
+            <!-- ?Contact Form End -->
 
-    <!-- ?Footer start -->
-    <footer class="footer mt-auto py-2 bg-secondary-kun">
-      <div class="container">
-        <div class="row justify-content-md-center mt-3">
-          <div class="col col-lg-2">
-            <p class="font-weight-normal">Made with <i class="fab fa-gratipay text-primary-kun"></i></p>
-          </div>
-          <div class="col-md-auto">
-            <p class="font-weight-normal">
-              Wanna to jump me to yours?
-              <a
-                href="mailto:farridguntoro@gmail.com"
-                class="text-primary-kun font-italic font-weight-bold text-decoration-none"
-                >farridguntoro@gmail.com</a
-              >
+            <!-- ?Footer start -->
+            <footer class="footer mt-auto py-2 bg-secondary-kun">
+                <div class="container">
+                    <div class="row justify-content-md-center mt-3">
+                        <div class="col col-lg-2">
+                            <p class="font-weight-normal">Made with <i class="fab fa-gratipay text-primary-kun"></i></p>
+                        </div>
+                        <div class="col-md-auto">
+                            <p class="font-weight-normal">
+                                Wanna to jump me to yours?
+                                <a href="mailto:farridguntoro@gmail.com" class="text-primary-kun font-italic font-weight-bold text-decoration-none">farridguntoro@gmail.com</a>
             </p>
           </div>
           <div class="col col-lg-2">
@@ -573,17 +582,17 @@
               <a href="https://instagram.com/farrid_jr" target="_blank" class="text-decoration-none font-weight-bold">
                 <i class="fab fa-instagram-square text-primary-kun"></i>
               </a>
-                        <a href="https://github.com/farridkun" target="_blank" class="text-decoration-none font-weight-bold">
-                            <i class="fab fa-github text-primary-kun"></i>
-                        </a>
-                        <a href="https://twitter.com/@kuntoro_farrid" target="_blank" class="text-decoration-none font-weight-bold">
-                            <i class="fab fa-twitter-square text-primary-kun"></i>
-                        </a>
-                        </p>
+                                <a href="https://github.com/farridkun" target="_blank" class="text-decoration-none font-weight-bold">
+                                    <i class="fab fa-github text-primary-kun"></i>
+                                </a>
+                                <a href="https://twitter.com/@kuntoro_farrid" target="_blank" class="text-decoration-none font-weight-bold">
+                                    <i class="fab fa-twitter-square text-primary-kun"></i>
+                                </a>
+                            </p>
+                        </div>
                     </div>
-            </div>
-            </div>
-            </div>
+                </div>
+                </div>
             </footer>
             <!-- ?Footer end -->
             <!-- !Main JS -->
