--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
 <body>
     <!-- ?Navbar menu start -->
     <div class="container">
-        <nav class="navbar navbar-light bg-transparent-kun fixed-top rounded-lg mx-5">
+        <nav class="navbar navbar-light bg-transparent-kun fixed-top rounded-lg mx-kun">
             <a class="navbar-brand font-weight-normal font-italic" href="#">
-            <img src="./assets/img/logo.png" width="44" height="44"
-          class="d-inline-block align-center alt="logo Kuntoro.tech"
-            loading="lazy" /> Kuntoro.tech
+                <img src="./assets/img/logo.png" width="44" height="44" class="d-inline-block align-center" alt="logo Kuntoro.tech" loading="lazy" /> Kuntoro.tech
             </a>
             <div class="my-2 my-lg-0">
                 <a href="#process" class="btn btn-lg btn-transparent-kun mr-md-3 rounded-pill"><i class="fas fa-dna"></i> Process</a>
@@ -228,7 +226,7 @@
     <!-- ?Thrid info end -->
 
     <!-- ?Process Exploring start -->
-    <div class="container mb-5" id="process">
+    <div class="container mb-5" id="process" data-aos="fade-up" data-aos-duration="3000">
       <div class="row justify-content-center">
         <ul class="list-group">
           <li class="text-monospace font-weight-bold text-center list-group-item border-0">EXPLORE MY PROCESS</li>
@@ -525,19 +523,19 @@
     <!-- ?Process Exploring end -->
 
     <!-- ?Contact Form Start -->
-    <div class="container mt-5 mb-5" id="contact">
+    <div class="container mt-5 mb-5" id="contact" data-aos="fade-up" data-aos-duration="3000">
       <div class="row justify-content-center">
         <ul class="list-group">
           <li class="text-monospace font-weight-bold text-center list-group-item border-0">CONTACT</li>
           <li class="list-group-item h1 text-center border-top-0 border-right-0 border-bottom-0 border-left-0">
             Let me know you need
           </li>
-          <li class="list-group text-center">
+          <li class="list-group text-center mb-5">
             Just let it down on below field form for touch me, it will reply as soon as possible.
           </li>
           <li class="list-group">
             <div class="card">
-              <img src="./assets/img/contact-kun-bg.jpg" class="card-img" alt="Background contact kun">
+              <img src="./assets/img/contact-kun-bg.jpg" class="card-img rounded-lg" alt="Background contact kun">
               <div class="card-img-overlay d-flex flex-row-reverse">
                 <form class="col-6">
                   <div class="form-group input-group-lg rounded-lg mt-3">
@@ -605,9 +603,9 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
             <!-- !!!Animate EXPERIMENT ON SCROLL JS -->
             <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-            <script>
-                AOS.init();
-            </script>
-        </body>
+     <script>
+        AOS.init();
+     </script>
+  </body>
 
-        </html>
+</html>
