Improving on Contact Form Mail Redirect 🔥

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
             <div class="card">
               <img src="./assets/img/contact-kun-bg.jpg" class="card-img rounded-lg" alt="Background contact kun">
               <div class="card-img-overlay d-flex flex-row-reverse">
-                <form class="col-6">
+                <form class="col-6" action="mailto:farridguntoro@gmail.com" method="POST" enctype="text/plain">
                   <div class="form-group input-group-lg rounded-lg mt-3">
                     <label for="formName" class="text-white">Your name :</label>
                     <input type="text" class="form-control" id="formName" placeholder="Type your name">
@@ -557,7 +557,7 @@
                     <textarea  class="form-control" id="formMessage" rows="5" placeholder="Tell me what i &amp; partners can help yours"> </textarea>
                   </div>
                   <br>
-                  <a href="mailto:farridguntoro@gmail.com" class="btn btn-lg btn-block btn-success-kun text-decoration-none">SEND</a>
+                  <input type="submit" class="btn btn-lg btn-block btn-success-kun text-decoration-none" value="SEND">
                         </form>
                     </div>
             </div>
